[gd_scene load_steps=14 format=3 uid="uid://5jrccvmoun5w"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_g7mau"]
[ext_resource type="Texture2D" uid="uid://c61yqxf6tg7mn" path="res://world/Bat.png" id="2_jmbm7"]
[ext_resource type="Texture2D" uid="uid://cbhmgan4t87xo" path="res://world/SmallShadow.png" id="3_2ey8p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p5b82"]
atlas = ExtResource("2_jmbm7")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5efm"]
atlas = ExtResource("2_jmbm7")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qh0v"]
atlas = ExtResource("2_jmbm7")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8qfn"]
atlas = ExtResource("2_jmbm7")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm8yr"]
atlas = ExtResource("2_jmbm7")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_yjxxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5b82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5efm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qh0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8qfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm8yr")
}],
"loop": true,
"name": &"fly",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jdrqs"]
radius = 4.47214

[sub_resource type="CircleShape2D" id="CircleShape2D_d403t"]
radius = 40.05

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e7kil"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v54oa"]
radius = 17.2047

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_g7mau")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yjxxc")
animation = &"fly"
offset = Vector2(0, -12)

[node name="shadow" type="Sprite2D" parent="."]
texture = ExtResource("3_2ey8p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jdrqs")

[node name="area_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_detection"]
shape = SubResource("CircleShape2D_d403t")

[node name="enemy_Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_Hitbox"]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_e7kil")

[node name="take_damage_coldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0.0431373, 1, 1)
offset_left = -7.0
offset_top = 6.0
offset_right = 143.0
offset_bottom = 36.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_v54oa")
debug_color = Color(0.847059, 0.282353, 0.643137, 0.419608)

[connection signal="body_entered" from="area_detection" to="." method="_on_area_detection_body_entered"]
[connection signal="body_exited" from="area_detection" to="." method="_on_area_detection_body_exited"]
[connection signal="body_entered" from="enemy_Hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_Hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_coldown" to="." method="_on_take_damage_coldown_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
